# math-on-demand

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: DeployDoxygen  DeployDoxygen.yml  deploy_doxygen.yml  unit_test_macos.yml  unit_test_macos_apple_clang.yml  unit_test_macos_clang.yml  unit_test_windows_msvc.yml
include/: Util.h  Vector3.h  exception.h  mathod.h  util.h  vector3.h
include/mathod/: mathod.h
include/mathod/impl/: exception.h  matrix.h  util.h  vector3.h
include/soo/impl/: exception.h  matrix.h  util.h  vector3.h
src/: library.cpp
test/: CMakeLists.txt  Vector3Test.cpp  lerp_test.cpp  matrix_test.cpp  util_test.cpp  vector3_test.cpp
